# Orderbook-Benchmarks

./: .clang-format  .gitmodules  README.md
benchmarks/: google_benchmark_main.cpp
benchmarks/include/: sample_data_generator.hpp
benchmarks/orderbooks/: binary_search_orderbook.h  boost_flat_map_orderbook.h  dro_flat_map_orderbook.h  linear_search_orderbook.h  std_map_ankerl_hashmap_orderbook.h  std_map_dro_hashmap_orderbook.h  std_map_orderbook.h
benchmarks/orderbooks/helper/: orderbook_level.hpp
benchmarks/tests/: CMakeLists.txt
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
coinbase_validation/: CMakeLists.txt  coinbase_validation_main.cpp
coinbase_validation/include/: common.h  loop.h  message_parser.h  message_types.h  orderbook.h  websocket.h
coinbase_validation/results/: benchmarked_results.txt
